Update engine/src/main/java/com/arcadedb/schema/IndexMetadata.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>