@@ -20,19 +20,31 @@ import java.util.*;
  * limitations under the License.
  */
 public class IndexMetadata {
-  public String       typeName;
-  public List<String> propertyNames;
-  public int          associatedBucketId;
+  private String       typeName;
+  private List<String> propertyNames;
+  private int          associatedBucketId;
 
   public IndexMetadata(final String typeName, final String[] propertyNames, final int bucketId) {
     this.typeName = typeName;
-    this.propertyNames = propertyNames != null ? List.of(propertyNames) : List.of();
+    this.propertyNames = propertyNames != null ? Collections.unmodifiableList(List.of(propertyNames)) : Collections.unmodifiableList(List.of());
     this.associatedBucketId = bucketId;
   }
 
   public void fromJSON(final JSONObject metadata) {
     typeName = metadata.getString("typeName");
-    propertyNames = metadata.getJSONArray("properties").toListOfStrings();
+    propertyNames = Collections.unmodifiableList(metadata.getJSONArray("properties").toListOfStrings());
     associatedBucketId = metadata.getInt("associatedBucketId", -1);
+  }
+
+  public String getTypeName() {
+    return typeName;
+  }
+
+  public List<String> getPropertyNames() {
+    return propertyNames;
+  }
+
+  public int getAssociatedBucketId() {
+    return associatedBucketId;
   }
 }
